--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Drawing</h2>
+        <h2>Hobby - Drawing</h2>
         <p>Drawing focus your your inner beauty. The premise is that drawing makes you think. This arti- cle explains various functions that drawing serves to prompt different kinds of thinking, and shares a framework that describes the purposes of drawing in supporting learning.</p>       
       </div>
       <iframe src="lb.html" name="iframe_a" height="600px" width="100%" title="Iframe Example"></iframe>
