--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <div class="hero-container round" style="background-color: rgba(0, 0, 0, 0.3); border-radius: 25px;" data-aos="fade-in">
       <h1>Abu Sufiun</h1>
-      <p>Expert in: <span class="typed" data-typed-items="Full Stack development, Laravel, React, RESTful API"></span></p>
+      <p>Expert in: <span class="typed" data-typed-items="Full Stack Developer, Laravel, React, RESTful API"></span></p>
     </div>
   </section><!-- End Hero -->
 
