--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="hero-container round" style="background-color: rgba(0, 0, 0, 0.3); border-radius: 25px;" data-aos="fade-in">
       <h1>Abu Sufiun</h1>
       <p>Expert in: <span class="typed" data-typed-items="Full Stack Developer, Laravel, React, RESTful API"></span></p>
+      <p><a href="./assets/file/Abu_Sufiun.pdf" class="btn btn-primary text-light" target="_blank"><b>Download CV</b></a></p>
     </div>
   </section><!-- End Hero -->
 
@@ -191,30 +192,30 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">RESTful API <i class="val">100%</i></span>
+              <span class="skill">RESTful API <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="90"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Laravel <i class="val">90%</i></span>
+              <span class="skill">Laravel <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="95"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">React <i class="val">75%</i></span>
+              <span class="skill">React <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="90"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Bootstrap & Tailwind CSS<i class="val">55%</i></span>
+              <span class="skill">Bootstrap & Tailwind CSS<i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="90"></div>
               </div>
             </div>
 
@@ -223,23 +224,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Database: SQL, MS-SQL, Oracle, My-SQL<i class="val">80%</i></span>
+              <span class="skill">Database: SQL, MS-SQL, Oracle, My-SQL<i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="95"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">OOP <i class="val">80%</i></span>
+              <span class="skill">OOP <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="85"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">PHP <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="90"></div>
               </div>
             </div>
 
@@ -274,11 +275,14 @@
             <div class="resume-item pb-0">
               <h4>Abu Sufiun</h4>
               <p><em>I am full stack developer (React + Laravel) with expert in Database. Also I`ve got experience working in both industry and academia. Having a mix of both helps me handle pressure creatively and manage complex projects effectively.</em></p>
+              <img style="max-width: 100%;height: auto;" src="./assets/img/braille1.png" alt="">
               <ul>
                 <li>Tongi Station Road, Bangladesh</li>
                 <li>(+880) 1878000675</li>
                 <li>abusufiun27@gmail.com</li>
               </ul>
+              
+              
             </div>
 
             <h3 class="resume-title">Education</h3>
