--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="https://www.facebook.com/abu.sufiun.7509/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
           <a href="https://github.com/sufiun27" class="google-plus"><i class="bx bxl-github"></i></a>
-          <a href="www.linkedin.com/in/abu-sufiun" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/abu-sufiun/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
