--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <li>Implementing business and production analysis applications & ERP systems to increase company efficiency.</li>
                 <li>Maintain server to deploy application and databases also Integrate different types of scanning device with ERP system.</li>
                 <li> Conducted thorough testing and troubleshooting to ensure seamless functionality of applications and systems.</li>
-                <li>• Collaborated with multiple departments, including planning, production, merchandising, sewing, cutting, packing, ticketing, GGT, warehouse, HR, and sampling, to develop their software needs.</li>
+                <li>Collaborated with multiple departments, including planning, production, merchandising, sewing, cutting, packing, ticketing, GGT, warehouse, HR, and sampling, to develop their software needs.</li>
                 
               </ul>
             </div>
